--- a/.github/workflows/cmake.yml
+++ b/.github/workflows/cmake.yml
@@ -1,16 +1,13 @@
 name: CMake
-
 on:
   push:
     branches: [ main ]
   pull_request:
     branches: [ main ]
   workflow_dispatch:
-
 env:
   # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
   BUILD_TYPE: Release
-
 jobs:
   build:
     # The CMake configure and build commands are platform agnostic and should work equally
@@ -19,14 +16,12 @@ jobs:
     # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
     strategy:
       matrix:
-        platform: [ubuntu-22.04, macos-14, windows-latest]
+        platform: [ubuntu-22.04, debian-12, macos-14, windows-latest]  # 添加 debian-12
     runs-on: ${{ matrix.platform }}
-
     steps:
     - uses: actions/checkout@v4
       with:
         submodules: recursive
-
     - name: Set short git commit SHA
       id: vars
       run: echo "COMMIT_SHORT_SHA=$(git rev-parse --short ${{ github.sha }})" >> $GITHUB_ENV   
@@ -37,7 +32,7 @@ jobs:
       with:
         path: 3rdparty/prebuilt
         key: ${{ runner.os }}-${{ matrix.platform }}-build-${{ hashFiles('3rdparty/build.sh') }}
-      if: runner.os == 'Linux' || runner.os == 'macOS'
+      if: runner.os == 'Linux' || runner.os == 'macOS'  # Debian也会被识别为Linux
     
     - name: Check 3rdparty prebuilt cache (Windows)
       id: cache-win
@@ -53,7 +48,7 @@ jobs:
         chmod +x "${GITHUB_WORKSPACE}/3rdparty/build.sh"
         # run script
         "${GITHUB_WORKSPACE}/3rdparty/build.sh"
-      if: (runner.os == 'Linux' || runner.os == 'macOS') && steps.cache-nix.outputs.cache-hit != 'true'
+      if: (runner.os == 'Linux' || runner.os == 'macOS') && steps.cache-nix.outputs.cache-hit != 'true'  # Debian也会被识别为Linux
       
     - name: Prebuild 3rdparty libs (Windows)
       run: |
@@ -66,11 +61,9 @@ jobs:
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
       run: cmake -B ${{github.workspace}}/build -DPVE_DDNS_CLIENT_VER="0.0.4_${{env.COMMIT_SHORT_SHA}}" -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
-
     - name: Build
       # Build your program with the given configuration
       run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
-
     #- name: Test
     #  working-directory: ${{github.workspace}}/build
       # Execute tests defined by the CMake configuration.  
@@ -81,67 +74,16 @@ jobs:
     - name: Upload artifact (Linux & macOS)
       uses: actions/upload-artifact@v4
       with:
-        name: ${{ runner.os }}-artifact
+        name: ${{ runner.os }}-${{ matrix.platform }}-artifact  # 修改名称以区分不同平台
         path: |
           ${{github.workspace}}/build/pve-ddns-client
           ${{github.workspace}}/build/*.yml
-      if: runner.os == 'Linux' || runner.os == 'macOS'
-
+      if: runner.os == 'Linux' || runner.os == 'macOS'  # Debian也会被识别为Linux
     - name: Upload artifact (Windows)
       uses: actions/upload-artifact@v4
       with:
-        name: ${{ runner.os }}-artifact
+        name: ${{ runner.os }}-${{ matrix.platform }}-artifact  # 修改名称以区分不同平台
         path: |
           ${{github.workspace}}\build\${{env.BUILD_TYPE}}\pve-ddns-client.exe
           ${{github.workspace}}\build\*.yml
       if: runner.os == 'Windows'
-
-  build-debian:
-    runs-on: ubuntu-latest
-    container:
-      image: debian:bookworm
-    env:
-      BUILD_TYPE: Release
-
-    steps:
-    - uses: actions/checkout@v4
-      with:
-        submodules: recursive
-
-    - name: Install build dependencies
-      run: |
-        apt-get update
-        DEBIAN_FRONTEND=noninteractive apt-get install -y \
-          build-essential cmake git curl unzip pkg-config
-
-    - name: Set short git commit SHA
-      id: vars
-      run: echo "COMMIT_SHORT_SHA=$(git rev-parse --short ${{ github.sha }})" >> $GITHUB_ENV
-
-    - name: Check 3rdparty prebuilt cache
-      uses: actions/cache@v4
-      id: cache-debian
-      with:
-        path: 3rdparty/prebuilt
-        key: debian-bookworm-build-${{ hashFiles('3rdparty/build.sh') }}
-
-    - name: Prebuild 3rdparty
-      if: steps.cache-debian.outputs.cache-hit != 'true'
-      run: |
-        chmod +x 3rdparty/build.sh
-        ./3rdparty/build.sh
-
-    - name: Configure CMake
-      run: cmake -B build -DPVE_DDNS_CLIENT_VER="0.0.4_${{env.COMMIT_SHORT_SHA}}" -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
-
-    - name: Build
-      run: cmake --build build --config ${{env.BUILD_TYPE}}
-
-    - name: Upload artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: debian-artifact
-        path: |
-          build/pve-ddns-client
-          build/*.yml
-
